--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>BlurPad Web</title>
   <link rel="stylesheet" href="./styles.css" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1653119848077016"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="app">
@@ -208,3 +210,4 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
