--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
     <!-- 這裡之後替換成廣告碼/iframe/ins -->
     <div class="ad-slot">
   <ins class="adsbygoogle"
-    style="display:block; width:100%; height:100%;"
-    data-ad-client="ca-pub-XXXXXXXXXXXX"
-    data-ad-slot="YYYYYYYYYY"
-    data-ad-format="auto"
-    data-full-width-responsive="true">
-  </ins>
+     style="display:block; width:100%; min-height:90px;"
+     data-ad-client="ca-pub-1653119848077016"
+     data-ad-slot="8466184852"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+
 </div>
 
 
@@ -210,5 +210,6 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
 
 
