--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
         <div class="form">
           <div class="field">
-            <label>背景圖（可選）</label>
+            <label data-i18n="BG(optional)">背景圖（可選）</label>
             <div class="inline" style="gap:10px; flex-wrap:wrap;">
-              <button id="btnPickBg" class="btn">選擇背景圖</button>
-              <button id="btnClearBg" class="btn" disabled>清除</button>
-              <span id="bgName" class="muted mono">（使用原圖）</span>
+              <button id="btnPickBg" class="btn" data-i18n="select-bg">選擇背景圖</button>
+              <button id="btnClearBg" class="btn" disabled data-i18n="clearBG">清除</button>
+              <span id="bgName" class="muted mono" data-i18n="useOri">(使用原圖）</span>
             </div>
             <input id="bgInput" type="file" accept="image/*" hidden />
           </div>
@@ -93,7 +93,7 @@
   <!-- Preset -->
   <div class="inline" style="gap:10px; flex-wrap:wrap;">
     <select id="sizePreset" style="min-width:220px;">
-      <option value="free" selected>自訂</option>
+      <option value="free" selected data-i18n="custom">自訂</option>
       <option value="fb_1_91_1">FB 橫幅 1.91:1（1200×630）</option>
 
       <option value="ig_1_1">IG 1:1（1080×1080）</option>
@@ -106,7 +106,7 @@
     </select>
 
     <label class="inline muted" style="gap:8px; user-select:none;">
-      <input id="mirror" type="checkbox" />
+      <input id="mirror" type="checkbox" data-i18n="horizontal"/>
       Mirror（左右鏡像）
     </label>
   </div>
