--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
         <div class="form">
           <div class="field">
-            <label data-i18n="BG(optional)">背景圖（可選）</label>
+            <label data-i18n="bg_optional">背景圖（可選）</label>
             <div class="inline" style="gap:10px; flex-wrap:wrap;">
               <button id="btnPickBg" class="btn" data-i18n="select-bg">選擇背景圖</button>
-              <button id="btnClearBg" class="btn" disabled data-i18n="clearBG">清除</button>
-              <span id="bgName" class="muted mono" data-i18n="useOri">(使用原圖）</span>
+              <button id="btnClearBg" class="btn" disabled data-i18n="clear">清除</button>
+              <span id="bgName" class="muted mono" data-i18n="use_ori">(使用原圖）</span>
             </div>
             <input id="bgInput" type="file" accept="image/*" hidden />
           </div>
@@ -94,7 +94,7 @@
   <div class="inline" style="gap:10px; flex-wrap:wrap;">
     <select id="sizePreset" style="min-width:220px;">
       <option value="free" selected data-i18n="custom">自訂</option>
-      <option value="fb_1_91_1">FB 橫幅 1.91:1（1200×630）</option>
+      <option value="fb_1_91_1">FB  1.91:1（1200×630）</option>
 
       <option value="ig_1_1">IG 1:1（1080×1080）</option>
       <option value="ig_4_5">IG 4:5（1080×1350）</option>
