--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="row">
           <div class="label" data-i18n="batch_folder">資料夾</div>
-          <div id="folderPath" class="mono muted">（尚未選擇）</div>
+          <div id="folderPath" class="mono muted" data-i18n="no_select">（尚未選擇）</div>
         </div>
 
         <div class="row">
@@ -106,8 +106,8 @@
     </select>
 
     <label class="inline muted" style="gap:8px; user-select:none;">
-      <input id="mirror" type="checkbox" data-i18n="horizontal"/>
-      Mirror（左右鏡像）
+      <input id="mirror" type="checkbox" />
+      <span data-i18n="horizontal">Mirror（左右鏡像）</span>
     </label>
   </div>
 
