--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
       <div class="actions">
         <select id="langSelect" class="btn">
-          <option value="zh-TW" data-i18n="lang.zhTW">繁體中文</option>
-          <option value="en" data-i18n="lang.en">English</option>
+          <option value="zh-TW" data-i18n="lang_zhTW">繁體中文</option>
+          <option value="en" data-i18n="lang_en">English</option>
         </select>
 
         <button id="btnPickFolder" class="btn" data-i18n="batch_pick">選擇資料夾</button>
