--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
         <div class="form">
           <div class="field">
-            <label data-i18n="bg_optional">背景圖（可選）</label>
+            <label data-i18n="bg_option">背景圖（可選）</label>
             <div class="inline" style="gap:10px; flex-wrap:wrap;">
-              <button id="btnPickBg" class="btn" data-i18n="select-bg">選擇背景圖</button>
+              <button id="btnPickBg" class="btn" data-i18n="select_bg">選擇背景圖</button>
               <button id="btnClearBg" class="btn" disabled data-i18n="clear">清除</button>
               <span id="bgName" class="muted mono" data-i18n="use_ori">(使用原圖）</span>
             </div>
